fix: hardcode gap for header-inline, xs button

--- a/src/components/reusable/modal/modal.scss
+++ b/src/components/reusable/modal/modal.scss
@@ -124,6 +124,10 @@ header {
   min-width: 0;
 }
 
+slot[name='header-inline']::slotted(.nav-tabs) {
+  gap: 8px;
+}
+
 slot[name='header-inline']::slotted(.button-nav-tabs) {
   margin-left: auto;
   display: flex;
